# zxing-cpp

./: CMakeLists.txt
core/: CMakeLists.txt
core/src/qrcode/: QRWriter.cpp
example/: CMakeLists.txt  ZXingQt6CamReader.qml  ZXingQtCamReader.cpp
example/ios/: Info.plist
